Fixed tests to ensure it passes. Added more documentation description to path and request parameters. Still need to fix the Epoch year error.